--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,3 +7,9 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 set -g default-terminal "screen-256color"
+
+bind-key -r j resize-pane -D 5
+bind-key -r k resize-pane -U 5
+bind-key -r h resize-pane -L 5
+bind-key -r l resize-pane -R 5
+
