--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,3 +13,26 @@ bind-key -r k resize-pane -U 5
 bind-key -r h resize-pane -L 5
 bind-key -r l resize-pane -R 5
 
+# New window with default path set to last path
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
+# for vim
+set -g @resurrect-strategy-vim 'session'
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+#http://superuser.com/questions/306028/tmux-and-zsh-custom-prompt-bug-with-window-name
+#http://stackoverflow.com/questions/6041178/keep-the-windows-name-fixed-in-tmux
+set-option -g allow-rename off
+set-window-option -g mode-keys vi
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
