feat: tmux config linux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,4 +36,4 @@ set-window-option -g mode-keys vi
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
